<resources>
    <string name="app_name">HustarMobileApp</string>
    <string name="master">Master</string>
    <string name="customer">Customer</string>
    <string name="service">서비스 선택</string>
    <string name="login">로그인</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="join">회원가입</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="birth">생년월일</string>
    <string name="name">이름</string>
    <string name="phone">휴대폰</string>
    <string name="gender">성별</string>
    <string name="register">등록</string>
    <string name="man">남자</string>
    <string name="woman">여자</string>
    <string name="cancel">취소</string>
    <string name="store_register">매장 등록</string>
    <string name="store">매장 이름</string>
    <string name="category">카테고리</string>
    <string name="address">주소</string>
    <string name="table_number">테이블 수</string>
    <string name="menu">메뉴</string>
    <string name="store_phone">매장 번호</string>
    <string name="store_intro">매장 소개</string>
    <string name="store_name">매장 이름</string>
    <string name="store_imege">매장 사진</string>
    <string name="menu_name">메뉴 이름</string>
    <string name="menu_price">메뉴 가격</string>
    <string name="menu_imege">메뉴 사진</string>
    <string name="menu_add">메뉴 추가</string>
    <string name="menu_modify">메뉴 수정</string>
    <string name="modify">수정</string>
    <string name="delete">삭제</string>
    <string name="table">테이블</string>
    <string name="member_modify">회원 정보 수정</string>
    <string name="total_member">총 인원</string>
    <string name="total_sales">총 매출</string>
    <string name="check">확인</string>
    <string name="store_delete">정말 삭제하시겠습니까?</string>
    <string name="sales">매출</string>
    <string name="reservation_list">예약 현황</string>
    <string name="complete">완료</string>
    <string name="menu_order">메뉴 주문</string>
    <string name="price">가격</string>
    <string name="order">주문</string>
    <string name="pay">계산</string>
    <string name="table_select">예약하실 테이블을 선택해주세요.</string>
    <string name="korean">한식</string>
    <string name="grade">평점</string>
    <string name="map">지도</string>
    <string name="people">인원 : </string>
    <string name="table_reservation_condition">테이블 현황 및 예약</string>
    <string name="store_add">매장등록</string>
    <string name="user">고객</string>
    <string name="manager">사업자</string>
    <string name="choice_service">사업자 선택</string>
    <string name="result">address</string>
    <string name="sign_up">회원가입</string>
    <string name="write_review">리뷰쓰기</string>
    <string name="rating">별점</string>
    <string name="date">날짜</string>
    <string name="comment">코멘트</string>
    <string name="reserve_check">예약하시겠습니까?</string>
    <string name="reservation">예약</string>
    <string name="reservation_condition">예약 내역</string>
    <string name="add_menu">메뉴 등록</string>
    <string name="address_hint">필요 시 상세 주소를 입력하세요</string>
    <string name="mn_name">메뉴 이름</string>
    <string name="mn_price">메뉴 가격</string>

    <string name="store_search">매장 검색 결과</string>
    <string name="store_detail_search">가게 상세 정보</string>
    <string name="show_menu">메뉴 보기</string>
    <string name="show_store_menu">주문 가능한 메뉴</string>

</resources>