<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/border">

    <ImageView
        android:id="@+id/listStoreImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:adjustViewBounds="true"
        android:maxHeight="100dp"
        android:padding="5dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/listStoreNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/store_name"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:adjustViewBounds="true"
        android:maxHeight="20dp"
        app:srcCompat="@drawable/star" />

    <TextView
        android:id="@+id/listStoreScoreTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/grade"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/table"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/listStoreConditionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/table_number"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>