<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="60dp"
    android:layout_marginLeft="60dp"
    android:layout_marginEnd="60dp"
    android:layout_marginRight="60dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/store_delete"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/storeSalesOkbutton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/black"
        android:onClick="onClickDeleteStoreComplete"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <Button
        android:id="@+id/addMenuCancelButton"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:onClick="onClickCancel"
        android:text="@string/cancel"
        android:textColor="@color/black" />
</LinearLayout>