<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="60dp"
    android:layout_marginLeft="60dp"
    android:layout_marginEnd="60dp"
    android:layout_marginRight="60dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/sales"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_member"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/storeIntroduceTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/black"
            android:textSize="18sp" />



    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C8C8C8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_sales"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/storeAddressTextview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/black"
            android:textSize="18sp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:background="#C8C8C8" />

    <Button
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/black"
        android:onClick="onClickCancel"
        android:text="@string/check"
        android:textColor="@color/white"
        android:textSize="17sp" />

</LinearLayout>